# chatagentcore

./: GEMINI.md  pyproject.toml  requirements.txt
chatagentcore/adapters/dingtalk/: __init__.py  client.py
chatagentcore/adapters/feishu/: __init__.py
chatagentcore/adapters/qq/: __init__.py  client.py
chatagentcore/api/: main.py
chatagentcore/api/models/: message.py
chatagentcore/api/schemas/: config.py
chatagentcore/api/websocket/: manager.py
chatagentcore/core/: config_manager.py  router.py
cli/: test_qq_ws.py
config/: config.yaml.example  openclaw.json  openclaw_config.json
